@@ -56,6 +56,7 @@ setup(name='zope.location',
                         'zope.schema>=3.5.1dev',
                         'zope.component',
                         'zope.proxy>3.3',
+                        'zope.copy',
                         ],
       include_package_data = True,
       zip_safe = False,
