@@ -1,7 +1,8 @@
 <configure xmlns="http://namespaces.zope.org/zope">
 
+  <adapter factory=".location.LocationProxy" />
+  <adapter factory=".pickling.LocationCopyHook" />
   <adapter factory=".traversing.LocationPhysicallyLocatable" />
   <adapter factory=".traversing.RootPhysicallyLocatable" />
-  <adapter factory=".location.LocationProxy" />
 
 </configure>
